<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/bkgnd_image_width"
            android:layout_height="@dimen/bkgnd_image_height"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:id="@+id/create_event_image_view1"
            android:src="@drawable/logo_transparent"/>

        <EditText
            android:id="@+id/create_event_name"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:hint="Event Name"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:inputType="text" >
            <requestFocus />
        </EditText>
        <Spinner
            android:id="@+id/create_event_sport_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:layout_gravity="center"
            android:textColor="@color/orange"
            android:drawSelectorOnTop="true"
            android:prompt="@string/sport_category_prompt">
        </Spinner>
        <Spinner
            android:id="@+id/create_event_sport_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:layout_gravity="center"
            android:textColor="@color/orange"
            android:drawSelectorOnTop="true"
            android:prompt="@string/prompt" />

        <EditText
            android:id="@+id/create_event_location"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:hint="Location"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:inputType="text" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/create_event_sport_specific_edittext"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:visibility="gone"
            />
        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_sport_specific_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:visibility="gone"
            />
        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_indoor_outdoor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:prompt="@string/sport_environment_prompt"
            />

        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_terrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:prompt="@string/sport_terrain_prompt"
            />


        <RelativeLayout
            android:id="@+id/view_event_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/create_event_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/create_event_start_date"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/event_table_margin"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:gravity="center_horizontal"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:layout_toLeftOf="@id/create_event_space"
            android:hint="Choose a Start Date" />

        <EditText
            android:id="@+id/create_event_start_time"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/event_table_margin"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:gravity="center_horizontal"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:layout_toRightOf="@id/create_event_space"
            android:hint="Pick a Start Time" />

        <TextView
            android:id="@+id/create_event_space2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/create_event_space"/>

        <EditText
            android:id="@+id/create_event_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/event_table_margin"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:layout_toLeftOf="@id/create_event_space2"
            android:layout_below="@id/create_event_start_date"
            android:hint="@string/event_end_date_text" />

        <EditText
            android:id="@+id/create_event_end_time"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/event_table_margin"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:layout_toRightOf="@id/create_event_space2"
            android:layout_below="@id/create_event_start_time"
            android:hint="@string/event_end_time_text" />

        </RelativeLayout>


        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_gender_spinner"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:layout_gravity="center" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin" >
            <TableRow
                android:id="@+id/eventTableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <csulb.edu.pickup.NoDefaultSpinner
                    android:id="@+id/create_event_age_min_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/edittext_text"/>

                <csulb.edu.pickup.NoDefaultSpinner
                    android:id="@+id/create_event_age_max_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/edittext_text"/>
            </TableRow>
        </TableLayout>

        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_skill_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:prompt="@string/sport_skill_level_prompt"
            />

        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_number_of_teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:visibility="visible"
            />
        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_max_num_ppl_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:visibility="gone"/>

        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_number_of_people_per_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:visibility="visible"/>

        <csulb.edu.pickup.NoDefaultSpinner
            android:id="@+id/create_event_min_user_rating_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/event_table_margin"
            android:layout_marginBottom="@dimen/event_table_margin"
            android:layout_gravity="center"
            android:textColor="@color/orange"
            android:textSize="@dimen/edittext_text"
            android:gravity="center"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/create_event_create_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_event_btn_txt"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/create_event_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>