<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eventLinearLayout1"
    android:layout_width="fill_parent"
    android:background="@drawable/orange3"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <ImageView
                android:layout_margin="20dp"
                android:layout_width="@dimen/login_image_width"
                android:layout_height="@dimen/login_image_height"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:id="@+id/create_event_image_view1"
                android:src="@drawable/circle_logo"/>




        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/eventTableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp" >


            </TableRow>

            <TableRow
                android:id="@+id/eventTableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >


                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:textSize="25dp"
                    android:hint="Email"
                    android:fadeScrollbars="false"
                    android:scrollbars="horizontal"
                    android:layout_centerInParent="true"
                    android:inputType="text"
                    >
                    <requestFocus />
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="25dp"
                    android:fadeScrollbars="false"
                    android:scrollbars="horizontal"
                    android:layout_centerInParent="true"
                    android:inputType="textPassword"
                    android:hint="Password">
                    <requestFocus />
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp" >

                <Button
                    android:id="@+id/forgot_passwd_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_passwd_btn_txt"
                    android:background="@android:color/transparent"
                    android:textColor="@color/dark_grey"
                    android:textSize="15dp"
                    android:layout_weight=".99"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" >

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login_btn_txt"
                    android:textColor="@color/dark_grey"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_weight=".99"
                    />
                <Button
                    android:id="@+id/create_account_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/create_acct_btn_txt"
                    android:layout_margin="10dp"
                    android:textSize="15dp"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"
                    android:layout_weight=".0" />
            </TableRow>


            <TableRow
                android:id="@+id/eventTableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                >

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    />

            </TableRow>
        </TableLayout>

        <TextView
        android:id="@+id/text_details"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:textColor="#fff000"/>



</LinearLayout>
    </ScrollView>
