...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsFragment"
    >
    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </FrameLayout>
    <fragment
        android:id="@+id/map"
...

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/add_icon"
        android:background="@color/transparent"
        android:id="@+id/map_plus_button"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

...
