<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewLinearLayout1"
    android:background="@drawable/field"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
...
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/black"
                    android:text="@string/event_name_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/event_view_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@drawable/white"
                    android:text=""
                    android:scrollbars = "vertical"
...
